object_detection_service/detection-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detection-app-deployment
  labels:
    app: detection-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: detection-app 
  template: 
    metadata:
      labels:
        app: detection-app 
    spec:
      containers:
        - name: detection-container
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-east-2.amazonaws.com/object-detection:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: detection-app-service
  labels:
    app: detection-app
spec:
  type: LoadBalancer
  ports:
    - port: 80 # external port 
      targetPort: 5000 # internal port
  selector:
    app: detection-app # connects us to our pod from above
