object_detection_service/detection-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: object-detection-ingress
spec:
  rules:
  - host: video-processing.com
    http: 
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: detection-app-service
            port: 
              number: 80
